--- a/app/src/ui/generator/generator.html
+++ b/app/src/ui/generator/generator.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../icon/icon.html">
 <link rel="import" href="../slider/slider.html">
 <link rel="import" href="../toggle/toggle-button.html">
+<link rel="import" href="../input/input.html">
 
 <dom-module id="pl-generator">
 
@@ -34,6 +35,11 @@
                 float: right;
                 --slider-track-size: 3px;
                 --slider-knob-size: 25px;
+            }
+
+            pl-input {
+                display: block;
+                position: relative;
             }
 
             .charsets > * {
@@ -80,6 +86,8 @@
                 <pl-toggle-button label="A-Z" active="{{ upper }}"></pl-toggle-button>
                 <pl-toggle-button label="0-9" active="{{ numbers }}"></pl-toggle-button>
                 <pl-toggle-button label="?()/%..." active="{{ other }}"></pl-toggle-button>
+                <p1-toggle-button label="Exclude:" active=" {{ exlude }} "></p1-toggle-button>
+                <p1-input id="excludeInput" value="{{ excludedChars }}" placeholder= "Enter characters"></p1-input>
             </div>
             <div>
                 <pl-slider min="5" max="50" value="{{ length }}"></pl-slider>
@@ -126,11 +134,19 @@ class Generator extends padlock.BaseElement {
         other: {
             type: Boolean,
             value: false
+        },
+        exlude: {
+            type: Boolean,
+            value: false
+        },
+        exludedChars: {
+            type: String,
+            value: ""
         }
     }; }
 
     static get observers() { return [
-        "generate(length, lower, upper, numbers, other)"
+        "generate(length, lower, upper, numbers, other, exlude, excludedChars)"
     ]; }
 
     generate() {
@@ -139,6 +155,7 @@ class Generator extends padlock.BaseElement {
         this.upper && (charSet += padlock.util.chars.upper);
         this.numbers && (charSet += padlock.util.chars.numbers);
         this.other && (charSet += padlock.util.chars.other);
+        this.exclude && (charSet = padlock.util.charSetFromBlacklist(charSet, this.excludedChars));
 
         this.value = charSet ? padlock.util.randomString(this.length, charSet) : "";
     }
